--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
         Файл: <input type="file"/>
         <button>Нажми меня!</button>
     </div>
+
+
+    <!-- ДЗ на сортировку -->
+    <div class = "sortirovka">
+        <span>Сортировка</span>
+            <button class="increase", onclick="sortListIncr()">по возрастанию</button>
+            <button class="decrease", onclick="sortListDecr()">по убыванию</button>
+    </div>
+
+
+
     <datalist id="ice-cream-flavors">
             <option value="Документ 1">
             <option value="Документ 2">
