--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="table.js"></script>
     <script src="index.js" async></script>
     <link rel="stylesheet" href="index.css">
 </head>
